--- a/src/app/jugador/jugador.component.html
+++ b/src/app/jugador/jugador.component.html
@@ -1,4 +1,4 @@
 <div class="player">
-  <img src="/assets/img/profile/1.webp" alt="">
+  <img class="jugador-u" src="assets/img/profile/monkey.png">
   <span>{{ name }}</span>
 </div>
